Corrected index.html (missing section)

--- a/index.html
+++ b/index.html
@@ -78,17 +78,19 @@
                 <li>Learning</li>
             </ul>
         </div>
-        <footer>
-            <h4>External Links</h4>
-            <nav>
-                <a href="https://github.com/Milok458">
-                    <img src="gitlogo.png" alt="github logo" style="height: 30px">
-                </a>
-                <a href="https://linkedin.com/in/luis-miguel-maawad-hinojosa-553a42170">
-                    <img src="inlogo.png" alt="linkedin logo" style="height: 30px">
-                </a>
-            </nav>
-        </footer>
+        <section>
+            <footer>
+                <h4>External Links</h4>
+                <nav>
+                    <a href="https://github.com/Milok458">
+                        <img src="gitlogo.png" alt="github logo" style="height: 30px">
+                    </a>
+                    <a href="https://linkedin.com/in/luis-miguel-maawad-hinojosa-553a42170">
+                        <img src="inlogo.png" alt="linkedin logo" style="height: 30px">
+                    </a>
+                </nav>
+            </footer>
+        </section>
     </main>
 </body>
 </html>
