Modified index.html and added index.css

--- a/index.html
+++ b/index.html
@@ -3,24 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Luis Miguel's Resume</title>
+    <link rel = "stylesheet" type = "text/css" href = "index.css" />
 </head>
 <body>
+    <div id="title">
+        <h1>Luis Miguel Maawad Hinojosa</h1>
+        <h2>Computer Science Engineer</h2>
+    </div>
+    <div>
+        <h4>Values</h4>
+        <p>Responsible and dedicated worker who enjoys learning.</p>
+    </div>
     <main>
-        <div>
-            <h1>Luis Miguel Maawad Hinojosa</h1>
-            <h2>Computer Science Engineer</h2>
-        </div>
-        <div>
-            <h4>Values</h4>
-            <p>Responsible and dedicated worker who enjoys learning.</p>
-        </div>
-        <div>
+        <div id="edu" class="sect">
             <h4>Education</h4>
             <ul>
                 <li>(07/2017-Present) B.S. Computer Science Engineering in ITESM</li>
             </ul>
         </div>
-        <div>
+        <div class="sect">
             <h4>Personal Projects</h4>
             <ul>
                 <li>(03/2019 – 11/2019) Taller De Alebrijes</li>
@@ -31,7 +32,7 @@
                 </li>
             </ul>
         </div>
-        <div>
+        <div class="sect">
             <h4>Programming Experience</h4>
             <ol>
                 <li>Java (2.5 yrs)</li>
@@ -44,7 +45,7 @@
                 <li>Swift (Currently Developing)</li>
             </ol>
         </div>
-        <div>
+        <div class="sect">
             <h4>Certifications</h4>
             <ul>
                 <li>TOEFEL <span style="color: blue">C1</span> (2017)</li>
@@ -60,7 +61,7 @@
                 </li>
             </ul>
         </div>
-        <div>
+        <div class="sect">
             <h4>Languages</h4>
             <ul>
                 <li>English (Bilingual)</li>
@@ -68,7 +69,7 @@
                 <li>Japanese (Elementary)</li>
             </ul>
         </div>
-        <div>
+        <div class="sect">
             <h4>Interests</h4>
             <ul>
                 <li>Software Development</li>
@@ -78,19 +79,22 @@
                 <li>Learning</li>
             </ul>
         </div>
-        <section>
-            <footer>
-                <h4>External Links</h4>
-                <nav>
-                    <a href="https://github.com/Milok458">
-                        <img src="gitlogo.png" alt="github logo" style="height: 30px">
-                    </a>
-                    <a href="https://linkedin.com/in/luis-miguel-maawad-hinojosa-553a42170">
-                        <img src="inlogo.png" alt="linkedin logo" style="height: 30px">
-                    </a>
-                </nav>
-            </footer>
-        </section>
     </main>
+    <div style="height: 100px">
+
+    </div>
+    <section>
+        <footer>
+            <h4>External Links</h4>
+            <nav>
+                <a href="https://github.com/Milok458">
+                    <img src="gitlogo.png" alt="github logo" style="height: 30px">
+                </a>
+                <a href="https://linkedin.com/in/luis-miguel-maawad-hinojosa-553a42170">
+                    <img src="inlogo.png" alt="linkedin logo" style="height: 30px">
+                </a>
+            </nav>
+        </footer>
+    </section>
 </body>
 </html>
